@@ -1,4 +1,10 @@
 ***********************************************************
+**********| Version 2.4.0 - Released 2014-06-04 |**********
+***********************************************************
+
+* bugfix in Payment Query configuration
+
+***********************************************************
 **********| Version 2.4.0 - Released 2014-04-30 |**********
 ***********************************************************
 
